--- a/public/css/main.scss
+++ b/public/css/main.scss
@@ -1,4 +1,3 @@
-
 /* latin */
 @font-face {
   font-family: 'Source Sans Pro';
@@ -27,22 +26,18 @@
 .supernav {
   display: none !important;
 }
-
 /* width */
 ::-webkit-scrollbar {
   width: 10px;
 }
-
 /* Track */
 ::-webkit-scrollbar-track {
   background: #f1f1f1;
 }
-
 /* Handle */
 ::-webkit-scrollbar-thumb {
   background: #888;
 }
-
 /* Handle on hover */
 ::-webkit-scrollbar-thumb:hover {
   background: #555;
@@ -81,7 +76,7 @@
 
   .imageMenu {
     background: #2b2e33;
-    padding: 30px 30px 60px 30px;
+    padding: 30px 30px 60px;
     min-height: 800px;
     height: 100vh;
     overflow-y: scroll;
@@ -99,7 +94,7 @@
     .toggleAdvanced {
       display: block;
       font-family: SourceSansPro-Regular, arial, sans-serif;
-      font-size: .85rem;
+      font-size: 0.85rem;
       text-transform: uppercase;
       margin-bottom: 10px;
     }
@@ -203,7 +198,7 @@
           height: auto;
         }
 
-        .centerRight {
+        &.centerRight {
           vertical-align: middle;
           margin-left: auto;
 
@@ -270,6 +265,77 @@
         .h3 {
           font-family: SourceSansPro-Light, arial, sans-serif;
         }
+      }
+    }
+
+    .arcLogo {
+      background: url('https://www2.arccorp.com/globalassets/arc-logos/corporate-logos/arc-logo-l-white.png')center center no-repeat;
+      background-size: contain;
+      position: absolute;
+      margin: 30px;
+
+      &.logoHide {
+        display: none;
+      }
+
+      &.x-small {
+        width: 40px;
+        height: 18px;
+      }
+
+      &.small {
+        width: 77px;
+        height: 34px;
+      }
+
+      &.medium {
+        width: 152px;
+        height: 62px;
+      }
+
+      &.large {
+        width: 236px;
+        height: 94px;
+      }
+
+      &.topRight {
+        top: 0;
+        right: 0;
+      }
+
+      &.topLeft {
+        top: 0;
+        left: 0;
+      }
+
+      &.bottomLeft {
+        bottom: 0;
+        left: 0;
+      }
+
+      &.bottomRight {
+        bottom: 0;
+        right: 0;
+      }
+
+      &.teal {
+        background: url("https://www2.arccorp.com/globalassets/arc-logos/corporate-logos/arc-logo-l-teal.png") center center no-repeat;
+        background-size: contain;
+      }
+
+      &.black {
+        background: url('https://www2.arccorp.com/globalassets/arc-logos/corporate-logos/arc-logo-l-black.png')center center no-repeat;
+        background-size: contain;
+      }
+
+      &.white {
+        background: url('https://www2.arccorp.com/globalassets/arc-logos/corporate-logos/arc-logo-l-white.png')center center no-repeat;
+        background-size: contain;
+      }
+
+      &.gray {
+        background: url('https://www2.arccorp.com/globalassets/arc-logos/corporate-logos/arc-logo-l-gray.png')center center no-repeat;
+        background-size: contain;
       }
     }
   }
