--- a/public/css/main.scss
+++ b/public/css/main.scss
@@ -268,6 +268,14 @@
       }
     }
 
+    .imageIcon {
+      display: inline-block;
+
+      img {
+        display:block;
+      }
+    }
+
     .arcLogo {
       background: url('https://www2.arccorp.com/globalassets/arc-logos/corporate-logos/arc-logo-l-white.png')center center no-repeat;
       background-size: contain;
