--- a/public/css/main.scss
+++ b/public/css/main.scss
@@ -43,6 +43,10 @@
   background: #555;
 }
 
+body {
+  font-size: 18px;
+}
+
 .data-panel {
   margin-top: 0 !important;
   height: auto !important;
@@ -71,19 +75,42 @@
 }
 
 .imageMaker {
+  background: #222222;
   margin: 0 auto;
   min-height: 800px;
 
+  .ctaBtn {
+    border-radius: 0;
+    margin-left: auto;
+    margin-right: auto;
+    border: none;
+    display: block;
+    width: 100%;
+    max-width: 10rem;
+    border-radius: 4px;
+    background: #189bb0;
+
+    &:hover {
+      border: none;
+    }
+  }
+
   .imageMenu {
-    background: #2b2e33;
-    padding: 30px 30px 60px;
+    background: #ffffff;
+    padding: 0;
     min-height: 800px;
     height: 100vh;
-    overflow-y: scroll;
+    overflow-y: auto;
+    box-shadow: rgba(0, 0, 0, 0.3) 0 20px 60px -10px;
 
     .imageMenuLogo {
       text-align: center;
-      margin-bottom: 30px;
+      padding: 30px 15px;
+      background: #189bb0;
+      background: -webkit-linear-gradient(to left, #16bdc8 20%, #189bb0 70%);
+      background: -o-linear-gradient(to left, #16bdc8 20%, #189bb0 70%);
+      background: -moz-linear-gradient(to left, #16bdc8 20%, #189bb0 70%);
+      background: linear-gradient(to left, #16bdc8 20%, #189bb0 70%);
 
       img {
         width: 100%;
@@ -100,34 +127,52 @@
     }
 
     label {
-      color: #ffffff;
+      font-family: SourceSansPro-Black, 'Source Sans Pro Black', arial, sans-serif;
+      color: #189bb0;
       margin-bottom: 5px;
+      font-size: 1rem;
+      text-transform: capitalize;
     }
 
     input {
       margin-bottom: 25px;
-      height: 2.2rem;
+      height: 2.5rem;
     }
 
     .hrInputs {
-      background-color: #222222;
-      border-top: 6px solid #189bb0;
+      background: transparent;
+      border-top: 1px solid #dddddd;
       padding-bottom: 25px;
     }
 
     .inputContainer {
       padding: 10px 30px;
-      background: #222222;
-      border-top: 4px solid #189bb0;
-      border-radius: 4px;
-      margin-bottom: 35px;
-      box-shadow: rgba(0, 0, 0, 0.3) 0 20px 60px -10px;
+      background: transparent;
+      margin-top: 30px;
+      //border-radius: 4px;
+      margin-bottom: 20px;
+      //box-shadow: rgba(0, 0, 0, 0.3) 0 20px 60px -10px;
+      margin-bottom: 5px;
+      border: none;
 
-      &.hrinputContainer {
-        margin-bottom: 0;
-        border: none;
-        textarea {
-          margin-bottom: 0 ;
+      textarea {
+        margin-bottom: 10px;
+        border-radius: 0;
+        background: #ffffff;
+        border: 1px solid #dddddd;
+        border-left: 5px solid #dddddd;
+        color: #6D6E71;
+        padding: 15px 20px;
+        border-left: 5px solid #dddddd;
+        min-height: 0;
+        font-size: 1rem;
+
+        &:active,
+        &:focus {
+          background: #f6f6f6;
+          color: #000000;
+          border-left: 5px solid #189bb0;
+          box-shadow: rgba(0, 0, 0, 0.5) 0 20px 60px -10px;
         }
       }
     }
@@ -138,17 +183,28 @@
 
       select {
         position: relative;
-        height: 2.2rem;
+        height: 2.5rem;
         color: #242039;
-        background: #f6f6f6;
-        border: 1px solid #eaeaea;
-        border-radius: 3px;
+        background: #ffffff;
+        border: 1px solid #dddddd;
+        border-radius: 0;
         font-family: SourceSansPro-Regular;
-        font-size: 0.875rem;
+        font-size: 1rem;
         padding: 0.5rem 2.5rem 0.5rem 0.5rem;
         -webkit-appearance: none;
         -moz-appearance: none;
         appearance: none;
+
+        &:active,
+        &:focus {
+          background: #f6f6f6;
+          color: #000000;
+          box-shadow: rgba(0, 0, 0, 0.5) 0 20px 60px -10px;
+        }
+
+        &:hover {
+          cursor: pointer;
+        }
       }
 
       &:after {
@@ -160,10 +216,10 @@
         font-family: 'icomoon' !important;
         right: 0;
         top: 0;
-        height: 2.2rem;
-        padding: 10px;
+        height: 2.5rem;
+        padding: 12px;
         z-index: 3;
-        border-radius: 0 3px 3px 0;
+        border-radius: 0;
         pointer-events: none;
         font-size: 12px;
       }
@@ -286,7 +342,7 @@
       display: inline-block;
 
       img {
-        display:block;
+        display: block;
       }
     }
 
