Add custom form upload and additional getty stock imagery for bg select

--- a/public/css/main.scss
+++ b/public/css/main.scss
@@ -226,6 +226,12 @@ body {
     }
   }
 
+  .customUpload {
+    input {
+      font-family: SourceSansPro-Regular, arial, sans-serif;
+    }
+  }
+
   .imageContainer {
     padding: 15px;
     max-width: 1250px;
