--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -89,8 +89,7 @@ label {
 }
 
 .imageBox {
-  //width: 100% !important;
-  //height: auto !important;
+  position: relative;
   display: flex;
   zoom: 0.7;
   background-size: cover;
@@ -163,6 +162,10 @@ label {
   display: flex;
 }
 
+.textContent {
+  line-height: 1.25;
+}
+
 .textContentCenter {
   display: flex;
   flex-direction: column;
@@ -183,4 +186,18 @@ label {
   width: 70px;
   margin-right: 5px;
   height: 30px;
+}
+
+.copyTemplate {
+  border: 1px solid #bbbbbb;
+  padding: 10px;
+  height: 250px;
+  overflow-y: scroll;
+  overflow-x: hidden;
+  margin-top: 15px;
+  width: 400px;
+}
+
+.arcLogoImage {
+  position: absolute;
 }
