--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -4,6 +4,20 @@
 
 @import "~bootstrap/scss/bootstrap";
 
+#app {
+  .row {
+    max-width: none !important;
+  }
+  button {
+    border: none;
+  }
+}
+
+.modal-content {
+  max-width: none !important;
+  padding: 0 !important;
+}
+
 label {
   color: #888888;
   font-size: 14px;
@@ -78,10 +92,6 @@ label {
   background: #f3f5f7;
   padding: 15px;
   min-height: 100vh;
-
-  .row {
-    max-width: none !important;
-  }
 }
 
 .dashboardWrapper {
